# shell-ws

./: .gitignore  AGENTS.md  PLAN.md  README.md  flake.nix  justfile  package-lock.json  package.json  working.md
.codex/: auth.json  config.toml  history.jsonl  models_cache.json  state_5.sqlite  state_5.sqlite-shm  state_5.sqlite-wal  version.json
.codex/shell_snapshots/: 019d021f-1244-77d2-b5aa-ba1d70f11e87.sh
kernel/: Cargo.toml
kernel/src/: execution.rs  formula.rs  id.rs  lib.rs  main.rs  materialized_output_store.rs  materialized_outputs.rs  model.rs  openai.rs  port_schema.rs  tuckspace_store.rs  workspace_store.rs
kernel/tests/: workspace_store.rs
ui/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: ResizablePane.tsx  ShellNode.tsx  WorkspaceEdge.tsx
ui/src/lib/: actionIcons.tsx  activeWorkspace.test.ts  activeWorkspace.ts  aiScript.test.ts  aiScript.ts  api.ts  compileExecutionRequest.test.ts  compileExecutionRequest.ts  drawOrder.test.ts  drawOrder.ts  executionPlan.test.ts  executionPlan.ts  executionTracking.test.ts  executionTracking.ts  format.test.tsx  format.tsx  formula.test.ts  formula.ts  layout.test.ts  layout.ts  materialized.ts  materializedOutputs.ts  nodePlacement.test.ts  nodePlacement.ts  nodePorts.test.ts  nodePorts.ts  paneLayout.test.ts  paneLayout.ts  portRefs.ts  portSchema.ts  reorderableList.test.ts  reorderableList.ts  runtimeEvents.test.ts  runtimeEvents.ts  selectionPreviewTabs.test.ts  selectionRect.ts  (+14 more)
(+3 files in other folders)
