[package]
name = "shell-ws-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "macros"] }
base64 = "0.22.1"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
thiserror = "2.0.3"
parking_lot = "0.12.3"
tokio-util = "0.7.12"
async-recursion = "1.1.1"

[dev-dependencies]
tempfile = "3.14.0"
